working on save ,edit other translation for game

--- a/WebBellwether.Web/app/integrationGames/editGameFeatures.html
+++ b/WebBellwether.Web/app/integrationGames/editGameFeatures.html
@@ -10,9 +10,9 @@
         </div>
         <!--GAME FEATURES-->
         <div ng-hide="gameFeature.language == null">
-            <label style="margin-bottom: 10px" ng-hide="gameFeatures[0].gameFeatureTemplateName == null">
+            <h4 style="margin-bottom: 10px;text-align:left" ng-hide="gameFeatures[0].gameFeatureTemplateName == null">
                 {{translation.FeatureDescription}}
-            </label>
+            </h4>
             <div class="has-error">
                 <div class="checkbox">
                     <label style="font-weight: bold">
