--- a/WebBellwether.Web/app/integrationGames/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/integrationGames/managementIntegrationGames.html
@@ -49,7 +49,7 @@
                     <!--SAVE TRANSLATION-->
                     <button class="btn btn-success btn-block" type="submit" ng-click="saveOtherTranslation()" ng-disabled="otherGameTranslation.$invalid"><span class="mif-checkmark"></span> {{translation.SaveTranslation}}</button>
                     <!--DELETE TRANSLATION-->
-                    <button class="btn btn-danger btn-block" type="submit" ng-click="" ng-disabled="otherGameTranslation.$invalid"><span class="mif-checkmark"></span> {{translation.DeleteTranslation}}</button>
+                    <button class="btn btn-danger btn-block" type="submit" ng-click="deleteTranslationDialog()" ng-disabled="otherGameTranslation.$invalid"><span class="mif-checkmark"></span> {{translation.DeleteTranslation}}</button>
                 </div>
             </div>
 
@@ -90,6 +90,14 @@
         <div>
             <button class="btn btn-warning" ng-click="deleteGame(selectedGame,false)" ng-disabled="selectedGame == ''">{{translation.RemoveMainTranslation}}</button>
             <button class="btn btn-danger" ng-click="deleteGame(selectedGame,true)" ng-hide="selectedGame == '' || countGameTranslation(selectedGame) < 2">{{translation.RemoveAllTranslation}}</button>
+        </div>
+        <span class="dialog-close-button"></span>
+    </div>
+    <div data-role="dialog" id="deleteTranslationDialog" class="text-center dialog alert" data-close-button="true" data-type="alert">
+        <h1>{{translation.RemoveGameTranslation}} :</h1>
+        <h1>{{selectedGameOtherTranslation.gameName}}</h1>
+        <div>
+            <button class="btn btn-warning" ng-click="deleteGame(selectedGameOtherTranslation,false)" ng-disabled="selectedGameOtherTranslation == ''">{{translation.Delete}}</button>
         </div>
         <span class="dialog-close-button"></span>
     </div>
