Edit , delete game translations works fine on chrome , i have problem with IE ...

--- a/WebBellwether.Web/app/integrationGames/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/integrationGames/managementIntegrationGames.html
@@ -97,7 +97,7 @@
         <h1>{{translation.RemoveGameTranslation}} :</h1>
         <h1>{{selectedGameOtherTranslation.gameName}}</h1>
         <div>
-            <button class="btn btn-warning" ng-click="deleteGame(selectedGameOtherTranslation,false)" ng-disabled="selectedGameOtherTranslation == ''">{{translation.Delete}}</button>
+            <button class="btn btn-warning" ng-click="deleteTranslation(selectedGameOtherTranslation)" ng-disabled="selectedGameOtherTranslation == ''">{{translation.Delete}}</button>
         </div>
         <span class="dialog-close-button"></span>
     </div>
