integration games rdy for any outside translate service

--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -68,6 +68,7 @@
     <script src="app/translations/translationService.js"></script>
     <script src="app/home/sharedService.js"></script>
     <script src="app/integrationGames/integrationGamesService.js"></script>
+    <script src="app/googleTranslate/googleTranslationServise.js"></script>
 
     <!-- Load controllers -->
     <script src="app/home/indexController.js"></script>
@@ -92,7 +93,6 @@
     <!-- Load custom directives -->
 
 
-
     <script type="text/javascript">
         //scrollowany nav
         var num = 480; //
@@ -103,6 +103,7 @@
                 $('.menu').removeClass('fixed');
             }
         });
+
     </script>
 </body>
 </html>
