--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -69,6 +69,7 @@
     <script src="app/home/sharedService.js"></script>
     <script src="app/integrationGames/integrationGamesService.js"></script>
     <script src="app/googleTranslate/googleTranslationServise.js"></script>
+    <script src="app/translations/translateService.js"></script>
 
     <!-- Load controllers -->
     <script src="app/home/indexController.js"></script>
