new module joke : entity and model complete . Works on management joke categories

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -44,7 +44,7 @@
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="">{{translation.AddJoke}}</a></li>
                                     <li><a href="">{{translation.JokesEdition}}</a></li>
-                                    <li><a href="">{{translation.ManagementJokeFeatures}}</a></li>
+                                    <li><a href="#/managementJokeCategories">{{translation.ManagementJokeCategories}}</a></li>
                                 </ul>
                             </li>
                             <li>
