--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -70,6 +70,7 @@
     <script src="app/integrationGames/integrationGamesService.js"></script>
     <script src="app/googleTranslate/googleTranslationServise.js"></script>
     <script src="app/translations/translateService.js"></script>
+    <script src="app/jokes/jokesService.js"></script>
 
     <!-- Load controllers -->
     <script src="app/home/indexController.js"></script>
@@ -89,6 +90,7 @@
     <script src="app/integrationGames/editGameFeaturesController.js"></script>
     <script src="app/integrationGames/newGameManagementController.js"></script>
     <script src="app/integrationGames/managementIntegrationGamesController.js"></script>
+    <script src="app/jokes/managementJokeCategoriesController.js"></script>
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
