management jokes : insert single joke + list of jokes

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -42,8 +42,7 @@
                             <li>
                                 <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementJokes}}</a>
                                 <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="">{{translation.AddJoke}}</a></li>
-                                    <li><a href="">{{translation.JokesEdition}}</a></li>
+                                    <li><a href="#/managementJokes">{{translation.ManagementJokes}}</a></li>
                                     <li><a href="#/managementJokeCategories">{{translation.ManagementJokeCategories}}</a></li>
                                 </ul>
                             </li>
