--- a/WebBellwether.Web/app/jokes/managementJokes.html
+++ b/WebBellwether.Web/app/jokes/managementJokes.html
@@ -1,1 +1,64 @@
-﻿management joke
+﻿<div class="container">
+    <h1 style="margin-bottom:20px">{{translation.ManagementJokes}}</h1>
+    <div class="col-md-4">
+        <!--NEW JOKE-->
+        <div class="formAni">
+            <h2 style="text-align:left">{{translation.AddJoke}}</h2>
+            <textarea class="form-control myFormColor" rows="16" required data-ng-model="newJoke.jokeContent" placeholder="{{translation.JokeContent}}"></textarea>
+            <label >{{translation.JokeCategory}}</label>
+            <select class="form-control myFormColor" required data-ng-model="newJoke.jokeCategoryId" data-ng-options="jk.id as jk.jokeCategoryName for jk in jokeCategories">
+                <option value=''>{{translation.SelectCategoryForJoke}}</option>
+            </select>
+            <div style="text-align: center">
+                <button class="btn btn-default btn-block" type="submit" ng-click="addJoke(newJoke,selectedLanguage)" ng-disabled="newJoke.jokeContent == null || newJoke.jokeCategoryId == null"><span class="mif-checkmark"></span> {{translation.AddJokeShort}}</button>
+            </div>
+        </div>
+        <!--EDIT JOKE-->
+        <div class="formAni">
+            <h2 style="text-align:left">{{translation.EditJoke}}</h2>            
+            <textarea  class="form-control myFormColor" rows="16" required data-ng-model="selectedJoke.jokeContent" placeholder="{{translation.JokeContent}}"></textarea>
+            <label>{{translation.JokeCategory}}</label>
+            <select class="form-control myFormColor" required data-ng-model="selectedJoke.jokeCategoryId" data-ng-options="jk.id as jk.jokeCategoryName for jk in jokeCategories">
+                <option value=''>{{translation.SelectCategoryForJoke}}</option>
+            </select>
+            <div style="text-align: center">
+                <button class="btn btn-success btn-block" type="submit" ng-click="" ng-disabled="selectedJoke.jokeContent == null || selectedJoke.jokeCategoryId == null"><span class="mif-checkmark"></span> {{translation.SaveJoke}}</button>
+            </div>
+            <div style="text-align: center">
+                <button class="btn btn-danger btn-block" type="submit" ng-click="" ng-disabled="selectedJoke.id == null"><span class="mif-checkmark"></span> {{translation.DeleteJoke}}</button>
+            </div>
+        </div>
+    </div>
+    <!--NEW TRANSLATION OR EDIT SELECTED TRANSLATION-->
+    <div class="col-md-4">
+
+    </div>
+    <!--JOKE LIST WITH TRANSLATIONS-->
+    <div class="col-md-4">
+        <h2 style="text-align:left">{{translation.ListOfJokeIncludesAvailableTranslation}}</h2>
+        <div ng-repeat="joke in jokes | startFrom:currentPage*pageSize | limitTo:pageSize">
+            <div class="myFormColor" ng-class="{selectedTransparent_hover : hover || selectedJoke.id == joke.id}" ng-mouseenter="hover=true" ng-mouseleave="hover=false" ng-click="">
+                {{joke.jokeContent}}
+                <div>
+                    <div ng-repeat="al in joke.jokeTranslations" class="inline-block">
+                        <div>
+                            <h5>
+                                <span style="margin-left: 4px" ng-class="al.hasTranslation ? 'label label-success' : 'label label-danger'"><span class={{al.language.languageFlag}}></span>{{al.language.languageShortName}}</span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--PAGER CONTROL-->
+        <div class="text-center">
+            <nav>
+                <ul class="pager">
+                    <li ng-hide="currentPage==0" ng-click="currentPage=currentPage-1"><a href="">{{translation.Previous}}</a></li>
+                    <li ng-hide="numberOfPages() == 0">{{currentPage+1}}/{{numberOfPages()}}</li>
+                    <li ng-hide="currentPage >= jokeCategories.length/pageSize - 1;" ng-click="currentPage=currentPage+1"><a href="">{{translation.Next}}</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
