--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -91,6 +91,7 @@
     <script src="app/integrationGames/newGameManagementController.js"></script>
     <script src="app/integrationGames/managementIntegrationGamesController.js"></script>
     <script src="app/jokes/managementJokeCategoriesController.js"></script>
+    <script src="app/jokes/managementJokesController.js"></script>
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
